<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".FragmentSolicitarVhiculo">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:id="@+id/vehicleList"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:gravity="left"
        android:padding="20dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/ingrese_destino"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/parque_ulloa"
                android:inputType="textPersonName"
                android:textSize="14sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/justificaci_n"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campoJustificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/entrega_de_material"
                android:inputType="textPersonName"
                android:textSize="14sp"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btnBeginHour"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/background_light"
                android:gravity="left"
                android:padding="6dp"
                android:text="@string/seleccionar_hora_inicio"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnEndHour"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/background_light"
                android:gravity="left"
                android:padding="6dp"
                android:text="@string/selecionar_hora_final"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnRealizarSolicitud"
                android:layout_width="208dp"
                android:layout_height="34dp"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="35dp"
                android:background="@color/colorPrimary"
                android:text="@string/realizar_solicitud"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />
            <LinearLayout
                android:id="@+id/layoutStatusRequetsVehicle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/requestVehicleState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/estado_de_la_solicitud" />

                <TextView
                    android:id="@+id/userRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/vehicleRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/targetRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/dateTimeRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>